# fincecore

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py  urls.py
src/cases/: apps.py
src/cashflow/: apps.py  urls.py
src/cashflow/services/: cashflow_manipulation.py
src/cashflow/views/: cashflow.py
src/employees/: apps.py
src/expenses/: apps.py  urls.py
src/expenses/migrations/: 0001_initial.py
src/expenses/models/: __init__.py  expenses.py  expenses_deferral.py
src/expenses/serializers/: expenses.py
src/expenses/views/: expenses.py
src/firms/: apps.py  urls.py
src/firms/migrations/: 0001_initial.py
src/firms/models/: __init__.py  firm_member.py  firm_structure.py
src/firms/serializers/: firm.py
src/firms/views/: firm.py
src/transactions/: apps.py
src/users/: admin.py  urls.py
src/users/migrations/: 0001_initial.py  0002_lawyerprofile.py
src/users/models/: __init__.py  laywer.py
src/users/serializers/: laywer.py  login.py  register.py
src/users/utils/: information_normalized.py
src/users/validators/: cpf.py  email.py  password.py
src/users/views/: laywer.py  login.py  logout.py  register.py
